--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -13,14 +13,15 @@ jobs:
       - name: Post to Discord
         run: |
           AUTHOR="${{ github.event.head_commit.author.name }}"
-          MESSAGE="${{ github.event.head_commit.message }}"
           URL="${{ github.event.head_commit.url }}"
 
-          # Escape special characters for JSON
-          ESCAPED_MESSAGE=$(jq -Rn --arg msg "$MESSAGE" '$msg')
+          # Generate JSON payload
+          jq -n \
+            --arg content "📢 **$AUTHOR** pushed to \`main\`:" \
+            --arg url "$URL" \
+            '{content: ($content + "\n" + $url)}' > payload.json
 
+          # Send to Discord
           curl -X POST -H "Content-Type: application/json" \
-            -d "{
-              \"content\": \"📢 **$AUTHOR** pushed to \`main\`:\n> $ESCAPED_MESSAGE\n🔗 $URL\"
-            }" \
+            -d @payload.json \
             ${{ secrets.DISCORD_WEBHOOK }}
