--- a/.github/workflows/discord.yml
+++ b/.github/workflows/discord.yml
@@ -11,17 +11,24 @@ jobs:
 
     steps:
       - name: Post to Discord
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
         run: |
-          AUTHOR="${{ github.event.head_commit.author.name }}"
-          URL="${{ github.event.head_commit.url }}"
+          echo '${{ toJson(github.event.commits) }}' > commits.json
 
-          # Generate JSON payload
-          jq -n \
-            --arg content "📢 **$AUTHOR** pushed to \`main\`:" \
-            --arg url "$URL" \
-            '{content: ($content + "\n" + $url)}' > payload.json
+          # Build a single message with all commits
+          MESSAGE="📢 **${{ github.event.pusher.name }}** pushed to \`main\`:\n"
+
+          jq -r '.[] | "* \(.message | split("\n")[0]) by **\(.author.name)**\n<\(.url)>"' commits.json >> commit_lines.txt
+
+          # Append each commit summary line to the message
+          while IFS= read -r line; do
+            MESSAGE+="$line\n"
+          done < commit_lines.txt
 
           # Send to Discord
+          jq -n --arg content "$MESSAGE" '{content: $content}' > payload.json
+
           curl -X POST -H "Content-Type: application/json" \
             -d @payload.json \
-            ${{ secrets.DISCORD_WEBHOOK }}
+            "$DISCORD_WEBHOOK"
